main-project/Gateway-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-app
  template:
    metadata:
      labels:
        app: gateway-app
    spec:
      containers:
        - image: gateway
          name: gateway
          imagePullPolicy: Never
          ports:
            - containerPort: 80
