main-project/AuthServer-Service.yaml
apiVersion: v1
kind: Service

metadata:
  name: auth-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: authserver-app
