main-project/Gateway-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 31100
  selector:
    app: gateway-app
  type: NodePort
