main-project/OrderAgg-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-agg-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: orderagg-app
