main-project/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: order-app
  type: ClusterIP
