main-project/tracker-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: tracker-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: tracker-app
  type: ClusterIP
