main-project/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
  - host: cruxtech.io
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:   
              number: 80                 
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:             
              number: 80    
      - path: /error
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:            
              number: 80    
      - path: /openapi
        pathType: Prefix
        backend:
          service:
            name: order-agg-service
            port:
              number: 80    
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order-agg-service
            port:
              number: 80    
      - path: /actuator/health
        pathType: Prefix
        backend:
          service:
            name: order-agg-service
            port:
              number: 80    
      - path: /webjars
        pathType: Prefix
        backend:
          service:
            name: order-agg-service
            port:
              number: 80
